Fixed bugs with validating in AddPointsRequestValidator